Add TS config to github workflows

--- a/ts/package.json
+++ b/ts/package.json
@@ -23,6 +23,9 @@
     }
   },
   "typings": "./dist/index.d.ts",
+  "engines": {
+    "node": "^18"
+  },
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build"
