--- a/.github/workflows/ts-release.yml
+++ b/.github/workflows/ts-release.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           node-version: "18.x"
           registry-url: "https://registry.npmjs.org"
+          scope: "@kanmon"
 
       - name: Generate openapi lib
         run: |
