--- a/ts/package.json
+++ b/ts/package.json
@@ -26,6 +26,9 @@
   "engines": {
     "node": "^18"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build"
