--- a/.github/workflows/ts-release.yml
+++ b/.github/workflows/ts-release.yml
@@ -24,6 +24,9 @@ jobs:
           registry-url: "https://registry.npmjs.org"
           scope: "@kanmon"
 
+      - name: Test yarn
+        run: yarn --version
+
       - name: Generate openapi lib
         run: |
           yarn
