--- a/.github/workflows/ts-release.yml
+++ b/.github/workflows/ts-release.yml
@@ -21,10 +21,7 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: "18.x"
-          registry-url: "https://registry.npmjs.org"
-
-      - name: Test yarn
-        run: yarn --version
+          registry-url: "https://registry.npmjs.org/@kanmon"
 
       - name: Generate openapi lib
         run: |
