--- a/.github/workflows/ts-release.yml
+++ b/.github/workflows/ts-release.yml
@@ -44,6 +44,7 @@ jobs:
           yarn version --prerelease --preid next-${{ github.sha }}
           yarn publish --access public --tag next
         env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Publish
