--- a/java/pom.xml
+++ b/java/pom.xml
@@ -1,12 +1,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+    <!-- TODO YY: Do I need to inherit this? -->
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>9</version>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.kanmon</groupId>
     <artifactId>kanmon-sdk</artifactId>
     <packaging>jar</packaging>
-    <name>kanmon-sdk</name>
+    <name>${project.groupId}:${project.artifactId}</name>
+    <!-- TODO Yao: Figure out what's the correct version to use -->
     <version>1.0.0</version>
-    <url>https://github.com/openapitools/openapi-generator</url>
+    <url>https://github.com/Kanmon/sdk.git</url>
     <description>Kanmon API SDK</description>
     <scm>
         <connection>scm:git:git@github.com:openapitools/openapi-generator.git</connection>
@@ -14,22 +23,17 @@
         <url>https://github.com/openapitools/openapi-generator</url>
     </scm>
 
+    <organization>
+        <name>Kanmon Inc.</name>
+        <url>https://kanmon.com</url>
+    </organization>
+
     <licenses>
         <license>
-            <name>Unlicense</name>
-            <url>http://unlicense.org</url>
-            <distribution>repo</distribution>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
         </license>
     </licenses>
-
-    <developers>
-        <developer>
-            <name>OpenAPI-Generator Contributors</name>
-            <email>team@openapitools.org</email>
-            <organization>OpenAPITools.org</organization>
-            <organizationUrl>http://openapitools.org</organizationUrl>
-        </developer>
-    </developers>
 
     <build>
         <plugins>
