--- a/ts/package.json
+++ b/ts/package.json
@@ -18,6 +18,7 @@
   "module": "./dist/index.js",
   "exports": {
     ".": {
+      "require": "./dist/index.js",
       "import": "./dist/index.js",
       "types": "./dist/index.d.js"
     }
