--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -14,6 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Move to Java Folder
+        run: cd java
+
       - name: Set up Maven Central Repository
         uses: actions/setup-java@v4
         with:
