Setup Java for auto-deploy on release

--- a/.github/workflows/java-release.yml
+++ b/.github/workflows/java-release.yml
@@ -1,12 +1,9 @@
 name: Java Release to Maven
 
-# on:
-#   push:
-#     tags:
-#       - "v*"
 on:
   push:
-    branches: update-package-json-require
+    tags:
+      - "v*"
 
 jobs:
   publish:
