--- a/ts/package.json
+++ b/ts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kanmon/sdk",
-  "version": "2.2.0",
+  "version": "2.2.1",
   "description": "Kanmon API client",
   "author": "Kanmon",
   "repository": {
@@ -18,6 +18,7 @@
   "module": "./dist/index.js",
   "exports": {
     ".": {
+      "require": "./dist/index.js",
       "import": "./dist/index.js",
       "types": "./dist/index.d.js"
     }
